Added tasks in the "TODO.md" file, working on the "OS.lib" file and on the Hardware module's "Memory.lib" library files

--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -2295,12 +2295,14 @@ alias BU.IsAndroidRooted='BU.Main.OS.IsAndroidRooted';
 
 alias BU.IsAndroidManufAlcatel='function BU.Main.OS.IsAndroidManufacturerAlcatel';
 alias BU.IsAndroidManufASUS='function BU.Main.OS.IsAndroidManufacturerASUS';
+alias BU.IsAndroidManufFujitsu='function BU.Main.OS.IsAndroidManufacturerFujitsu';
 alias BU.IsAndroidManufGoogle='function BU.Main.OS.IsAndroidManufacturerGoogle';
 alias BU.IsAndroidManufHTC='function BU.Main.OS.IsAndroidManufacturerHTC';
 alias BU.IsAndroidManufHuawei='function BU.Main.OS.IsAndroidManufacturerHuawei';
 alias BU.IsAndroidManufLG='function BU.Main.OS.IsAndroidManufacturerLG';
 alias BU.IsAndroidManufMotorola='function BU.Main.OS.IsAndroidManufacturerMotorola';
 alias BU.IsAndroidManufOppo='function BU.Main.OS.IsAndroidManufacturerOppo';
+alias BU.IsAndroidManufPanasonic='function BU.Main.OS.IsAndroidManufacturerPanasonic';
 alias BU.IsAndroidManufSamsung='function BU.Main.OS.IsAndroidManufacturerSamsung';
 alias BU.IsAndroidManufSony='function BU.Main.OS.IsAndroidManufacturerSony';
 alias BU.IsAndroidManufVivo='function BU.Main.OS.IsAndroidManufacturerVivo';
@@ -2317,6 +2319,7 @@ alias BU.IsAndroidPhoneManufHuawei='function BU.Main.OS.IsAndroidSmartphoneManuf
 alias BU.IsAndroidPhoneManufLG='function BU.Main.OS.IsAndroidSmartphoneManufacturerLG';
 alias BU.IsAndroidPhoneManufMotorola='function BU.Main.OS.IsAndroidSmartphoneManufacturerMotorola';
 alias BU.IsAndroidPhoneManufOppo='function BU.Main.OS.IsAndroidSmartphoneManufacturerOppo';
+alias BU.IsAndroidPhoneManufPanasonic='function BU.Main.OS.IsAndroidSmartphoneManufacturerPanasonic';
 alias BU.IsAndroidPhoneManufSamsung='function BU.Main.OS.IsAndroidSmartphoneManufacturerSamsung';
 alias BU.IsAndroidPhoneManufSony='function BU.Main.OS.IsAndroidSmartphoneManufacturerSony';
 alias BU.IsAndroidPhoneManufVivo='function BU.Main.OS.IsAndroidSmartphoneManufacturerVivo';
@@ -2326,7 +2329,9 @@ alias BU.IsAndroidDeviceTablet='BU.Main.OS.IsAndroidDeviceTablet';
 alias BU.IsAndroidDeviceTabletRooted='BU.Main.OS.IsAndroidDeviceTabletRooted';
 
 alias BU.IsAndroidTabManufASUS='function BU.Main.OS.IsAndroidTabletManufacturer';
+alias BU.IsAndroidTabManufFujitsu='function BU.Main.OS.IsAndroidTabletManufacturerFujitsu';
 alias BU.IsAndroidTabManufHuawei='function BU.Main.OS.IsAndroidTabletManufacturer';
+alias BU.IsAndroidTabManufPanasonic='function BU.Main.OS.IsAndroidTabletManufacturerPanasonic';
 alias BU.IsAndroidTabManufSamsung='function BU.Main.OS.IsAndroidTabletManufacturerSamsung';
 
 ## ----------------------------------------------
@@ -2461,21 +2466,67 @@ alias BU.GetCurrentOS='BU.Main.OS.GetCurrentOS';
 alias BU.CheckLinuxDistro='BU.Main.OS.CheckLinuxDistro';
 alias BU.CheckLinuxDistroVersion='BU.Main.OS.CheckLinuxDistroVersion';
 
+alias BU.CheckLinuxKernelFullVersion='BU.Main.OS.CheckLinuxKernelFullVersion';
 alias BU.CheckLinuxKernelMajorVersion='BU.Main.OS.CheckLinuxKernelMajorVersion';
 alias BU.CheckLinuxKernelMinorVersion='BU.Main.OS.CheckLinuxKernelMinorVersion';
-alias BU.CheckLinuxKernelVersion='BU.Main.OS.CheckLinuxKernelVersion';
+alias BU.CheckLinuxKernelPatchNumber='BU.Main.OS.CheckLinuxKernelPatchNumber';
+alias BU.CheckLinuxKernelConfiguration='BU.Main.OS.CheckLinuxKernelConfiguration';
 
 alias BU.IsOSLinux='BU.Main.OS.IsLinux';
 
 # --------------------
-alias BU.IsOSLinuxDistroArchLinux='BU.Main.OS.IsLinuxDistroArchLinux';
+
+# Checking if current Linux distribution is Alpine Linux.
+
+alias BU.IsLinuxDistroAlpineLinux='BU.Main.OS.IsLinuxDistroAlpineLinux';
+
+# Checking Alpine Linux versions.
+alias BU.IsLinuxDistroAlpineLinux3_7='BU.Main.OS.IsLinuxDistroAlpineLinux3_7';
+alias BU.IsLinuxDistroAlpineLinux3_8='BU.Main.OS.IsLinuxDistroAlpineLinux3_8';
+alias BU.IsLinuxDistroAlpineLinux3_9='BU.Main.OS.IsLinuxDistroAlpineLinux3_9';
+
+alias BU.IsLinuxDistroAlpineLinux3_10='BU.Main.OS.IsLinuxDistroAlpineLinux3_10';
+alias BU.IsLinuxDistroAlpineLinux3_11='BU.Main.OS.IsLinuxDistroAlpineLinux3_11';
+alias BU.IsLinuxDistroAlpineLinux3_12='BU.Main.OS.IsLinuxDistroAlpineLinux3_12';
+alias BU.IsLinuxDistroAlpineLinux3_13='BU.Main.OS.IsLinuxDistroAlpineLinux3_13';
+alias BU.IsLinuxDistroAlpineLinux3_14='BU.Main.OS.IsLinuxDistroAlpineLinux3_14';
+alias BU.IsLinuxDistroAlpineLinux3_15='BU.Main.OS.IsLinuxDistroAlpineLinux3_15';
+alias BU.IsLinuxDistroAlpineLinux3_16='BU.Main.OS.IsLinuxDistroAlpineLinux3_16';
+alias BU.IsLinuxDistroAlpineLinux3_17='BU.Main.OS.IsLinuxDistroAlpineLinux3_17';
 
 
 # --------------------
+
+# Checking if current Linux distribution is Arch Linux.
+alias BU.IsOSLinuxDistroArchLinux='BU.Main.OS.IsLinuxDistroArchLinux';
+
+# Checking Arch Linux versions.
+alias BU.IsLinuxDistroArchLinux2023_04_01='BU.Main.OS.IsLinuxDistroArchLinux2023_04_01';
+alias BU.IsLinuxDistroArchLinux2023_03_01='BU.Main.OS.IsLinuxDistroArchLinux2023_03_01';
+alias BU.IsLinuxDistroArchLinux2023_02_01='BU.Main.OS.IsLinuxDistroArchLinux2023_02_01';
+alias BU.IsLinuxDistroArchLinux2023_01_01='BU.Main.OS.IsLinuxDistroArchLinux2023_01_01';
+
+alias BU.IsLinuxDistroArchLinux2022_12_01='BU.Main.OS.IsLinuxDistroArchLinux2022_12_01';
+alias BU.IsLinuxDistroArchLinux2022_11_01='BU.Main.OS.IsLinuxDistroArchLinux2022_11_01';
+alias BU.IsLinuxDistroArchLinux2022_10_01='BU.Main.OS.IsLinuxDistroArchLinux2022_10_01';
+alias BU.IsLinuxDistroArchLinux2022_09_03='BU.Main.OS.IsLinuxDistroArchLinux2022_09_03';
+alias BU.IsLinuxDistroArchLinux2022_08_05='BU.Main.OS.IsLinuxDistroArchLinux2022_08_05';
+alias BU.IsLinuxDistroArchLinux2022_07_01='BU.Main.OS.IsLinuxDistroArchLinux2022_07_01';
+alias BU.IsLinuxDistroArchLinux2022_06_01='BU.Main.OS.IsLinuxDistroArchLinux2022_06_01';
+alias BU.IsLinuxDistroArchLinux2022_05_01='BU.Main.OS.IsLinuxDistroArchLinux2022_05_01';
+alias BU.IsLinuxDistroArchLinux2022_04_05='BU.Main.OS.IsLinuxDistroArchLinux2022_04_05';
+alias BU.IsLinuxDistroArchLinux2022_04_01='BU.Main.OS.IsLinuxDistroArchLinux2022_04_01';
+alias BU.IsLinuxDistroArchLinux2022_03_01='BU.Main.OS.IsLinuxDistroArchLinux2022_03_01';
+alias BU.IsLinuxDistroArchLinux2022_02_01='BU.Main.OS.IsLinuxDistroArchLinux2022_02_01';
+alias BU.IsLinuxDistroArchLinux2022_01_01='BU.Main.OS.IsLinuxDistroArchLinux2022_01_01';
+
+
+# --------------------
+
 # Checking if current Linux distribution is Debian.
 alias BU.IsOSLinuxDistroDebian='BU.Main.OS.IsLinuxDistroDebian';
 
-# Checking debian versions.
+# Checking Debian versions.
 alias BU.IsOSLinuxDistroDebian4='BU.Main.OS.IsLinuxDistroDebian4';
 alias BU.IsOSLinuxDistroDebian5='BU.Main.OS.IsLinuxDistroDebian5';
 alias BU.IsOSLinuxDistroDebian6='BU.Main.OS.IsLinuxDistroDebian6';
@@ -2487,12 +2538,20 @@ alias BU.IsOSLinuxDistroDebian11='BU.Main.OS.IsLinuxDistroDebian11';
 
 
 # --------------------
+
 # Checking if current Linux distribution is Fedora.
 alias BU.IsOSLinuxDistroFedora='BU.Main.OS.IsLinuxDistroFedora';
 
 # Checking Fedora versions.
+alias BU.IsOSLinuxDistroFedora12='BU.Main.OS.IsLinuxDistroFedora12';
+alias BU.IsOSLinuxDistroFedora13='BU.Main.OS.IsLinuxDistroFedora13';
+alias BU.IsOSLinuxDistroFedora14='BU.Main.OS.IsLinuxDistroFedora14';
+alias BU.IsOSLinuxDistroFedora15='BU.Main.OS.IsLinuxDistroFedora15';
+alias BU.IsOSLinuxDistroFedora16='BU.Main.OS.IsLinuxDistroFedora16';
+alias BU.IsOSLinuxDistroFedora17='BU.Main.OS.IsLinuxDistroFedora17';
 alias BU.IsOSLinuxDistroFedora18='BU.Main.OS.IsLinuxDistroFedora18';
 alias BU.IsOSLinuxDistroFedora19='BU.Main.OS.IsLinuxDistroFedora19';
+
 alias BU.IsOSLinuxDistroFedora20='BU.Main.OS.IsLinuxDistroFedora20';
 alias BU.IsOSLinuxDistroFedora21='BU.Main.OS.IsLinuxDistroFedora21';
 alias BU.IsOSLinuxDistroFedora22='BU.Main.OS.IsLinuxDistroFedora22';
@@ -2503,6 +2562,7 @@ alias BU.IsOSLinuxDistroFedora26='BU.Main.OS.IsLinuxDistroFedora26';
 alias BU.IsOSLinuxDistroFedora27='BU.Main.OS.IsLinuxDistroFedora27';
 alias BU.IsOSLinuxDistroFedora28='BU.Main.OS.IsLinuxDistroFedora28';
 alias BU.IsOSLinuxDistroFedora29='BU.Main.OS.IsLinuxDistroFedora29';
+
 alias BU.IsOSLinuxDistroFedora30='BU.Main.OS.IsLinuxDistroFedora30';
 alias BU.IsOSLinuxDistroFedora31='BU.Main.OS.IsLinuxDistroFedora31';
 alias BU.IsOSLinuxDistroFedora32='BU.Main.OS.IsLinuxDistroFedora32';
@@ -2510,24 +2570,65 @@ alias BU.IsOSLinuxDistroFedora33='BU.Main.OS.IsLinuxDistroFedora33';
 alias BU.IsOSLinuxDistroFedora34='BU.Main.OS.IsLinuxDistroFedora34';
 alias BU.IsOSLinuxDistroFedora35='BU.Main.OS.IsLinuxDistroFedora35';
 alias BU.IsOSLinuxDistroFedora36='BU.Main.OS.IsLinuxDistroFedora36';
+alias BU.IsOSLinuxDistroFedora37='BU.Main.OS.IsLinuxDistroFedora37';
+alias BU.IsOSLinuxDistroFedora38='BU.Main.OS.IsLinuxDistroFedora38';
 
 
 # --------------------
+
 # Checking if current Linux distribution is Linux Mint.
 alias BU.IsOSLinuxDistroLinuxMint='BU.Main.OS.IsLinuxDistroLinuxMint';
+
+# Checking Linux Mint versions.
+alias BU.IsOSLinuxDistroLinuxMint8='BU.Main.OS.IsLinuxDistroLinuxMint8';
+alias BU.IsOSLinuxDistroLinuxMint9='BU.Main.OS.IsLinuxDistroLinuxMint9';
+
+alias BU.IsOSLinuxDistroLinuxMint10='BU.Main.OS.IsLinuxDistroLinuxMint10';
+alias BU.IsOSLinuxDistroLinuxMint11='BU.Main.OS.IsLinuxDistroLinuxMint11';
+alias BU.IsOSLinuxDistroLinuxMint12='BU.Main.OS.IsLinuxDistroLinuxMint12';
+alias BU.IsOSLinuxDistroLinuxMint13='BU.Main.OS.IsLinuxDistroLinuxMint13';
+alias BU.IsOSLinuxDistroLinuxMint14='BU.Main.OS.IsLinuxDistroLinuxMint14';
+alias BU.IsOSLinuxDistroLinuxMint15='BU.Main.OS.IsLinuxDistroLinuxMint15';
+alias BU.IsOSLinuxDistroLinuxMint16='BU.Main.OS.IsLinuxDistroLinuxMint16';
+
+alias BU.IsOSLinuxDistroLinuxMint17='BU.Main.OS.IsLinuxDistroLinuxMint17';
+alias BU.IsOSLinuxDistroLinuxMint17_1='BU.Main.OS.IsLinuxDistroLinuxMint17_1';
+alias BU.IsOSLinuxDistroLinuxMint17_2='BU.Main.OS.IsLinuxDistroLinuxMint17_2';
+alias BU.IsOSLinuxDistroLinuxMint17_3='BU.Main.OS.IsLinuxDistroLinuxMint17_3';
+
+alias BU.IsOSLinuxDistroLinuxMint18='BU.Main.OS.IsLinuxDistroLinuxMint18';
+alias BU.IsOSLinuxDistroLinuxMint18_1='BU.Main.OS.IsLinuxDistroLinuxMint18_1';
+alias BU.IsOSLinuxDistroLinuxMint18_2='BU.Main.OS.IsLinuxDistroLinuxMint18_2';
+alias BU.IsOSLinuxDistroLinuxMint18_3='BU.Main.OS.IsLinuxDistroLinuxMint18_3';
+
+alias BU.IsOSLinuxDistroLinuxMint19='BU.Main.OS.IsLinuxDistroLinuxMint19';
+alias BU.IsOSLinuxDistroLinuxMint19_1='BU.Main.OS.IsLinuxDistroLinuxMint19_1';
+alias BU.IsOSLinuxDistroLinuxMint19_2='BU.Main.OS.IsLinuxDistroLinuxMint19_2';
+alias BU.IsOSLinuxDistroLinuxMint19_3='BU.Main.OS.IsLinuxDistroLinuxMint19_3';
+
+alias BU.IsOSLinuxDistroLinuxMint20='BU.Main.OS.IsLinuxDistroLinuxMint20';
+alias BU.IsOSLinuxDistroLinuxMint20_1='BU.Main.OS.IsLinuxDistroLinuxMint20_1';
+alias BU.IsOSLinuxDistroLinuxMint20_2='BU.Main.OS.IsLinuxDistroLinuxMint20_2';
+alias BU.IsOSLinuxDistroLinuxMint20_3='BU.Main.OS.IsLinuxDistroLinuxMint20_3';
+
+alias BU.IsOSLinuxDistroLinuxMint21='BU.Main.OS.IsLinuxDistroLinuxMint21';
+alias BU.IsOSLinuxDistroLinuxMint21_1='BU.Main.OS.IsLinuxDistroLinuxMint21_1';
 
 
 # --------------------
 # Checking if current Linux distribution is Manjaro.
+
 alias BU.IsOSLinuxDistroManjaro='BU.Main.OS.IsLinuxDistroManjaro';
 
 
 # --------------------
+
 # Checking if current Linux distribution is SUSE.
 alias BU.IsOSLinuxDistroSUSE='BU.Main.OS.IsLinuxDistroSUSE';
 
 
 # --------------------
+
 # Checking if current Linux distribution is Ubuntu.
 alias BU.IsOSLinuxDistroUbuntu='BU.Main.OS.IsLinuxDistroUbuntu';
 
@@ -2542,6 +2643,7 @@ alias BU.IsOSLinuxDistroUbuntu13_04='BU.Main.OS.IsLinuxDistroUbuntu13_04';
 alias BU.IsOSLinuxDistroUbuntu13_10='BU.Main.OS.IsLinuxDistroUbuntu13_10';
 alias BU.IsOSLinuxDistroUbuntu14_04='BU.Main.OS.IsLinuxDistroUbuntu14_04';
 alias BU.IsOSLinuxDistroUbuntu14_10='BU.Main.OS.IsLinuxDistroUbuntu14_10';
+
 alias BU.IsOSLinuxDistroUbuntu15_04='BU.Main.OS.IsLinuxDistroUbuntu15_04';
 alias BU.IsOSLinuxDistroUbuntu15_10='BU.Main.OS.IsLinuxDistroUbuntu15_10';
 alias BU.IsOSLinuxDistroUbuntu16_04='BU.Main.OS.IsLinuxDistroUbuntu16_04';
@@ -2552,6 +2654,7 @@ alias BU.IsOSLinuxDistroUbuntu18_04='BU.Main.OS.IsLinuxDistroUbuntu18_04';
 alias BU.IsOSLinuxDistroUbuntu18_10='BU.Main.OS.IsLinuxDistroUbuntu18_10';
 alias BU.IsOSLinuxDistroUbuntu19_04='BU.Main.OS.IsLinuxDistroUbuntu19_04';
 alias BU.IsOSLinuxDistroUbuntu19_10='BU.Main.OS.IsLinuxDistroUbuntu19_10';
+
 alias BU.IsOSLinuxDistroUbuntu20_04='BU.Main.OS.IsLinuxDistroUbuntu20_04';
 alias BU.IsOSLinuxDistroUbuntu20_10='BU.Main.OS.IsLinuxDistroUbuntu20_10';
 alias BU.IsOSLinuxDistroUbuntu21_04='BU.Main.OS.IsLinuxDistroUbuntu21_04';
@@ -2563,6 +2666,7 @@ alias BU.IsOSLinuxDistroUbuntu23_04='BU.Main.OS.IsLinuxDistroUbuntu23_04';
 # --------------------
 
 # Checking the current major Linux kernel version.
+alias BU.IsLinuxKernelMajor2='BU.Main.OS.IsLinuxKernelMajor2';
 alias BU.IsLinuxKernelMajor3='BU.Main.OS.IsLinuxKernelMajor3';
 alias BU.IsLinuxKernelMajor4='BU.Main.OS.IsLinuxKernelMajor4';
 alias BU.IsLinuxKernelMajor5='BU.Main.OS.IsLinuxKernelMajor5';
