--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -2330,9 +2330,11 @@ alias BU.IsAndroidPhoneManufXiaomi='function BU.Main.OS.IsAndroidSmartphoneManuf
 alias BU.IsAndroidDeviceTablet='BU.Main.OS.IsAndroidDeviceTablet';
 alias BU.IsAndroidDeviceTabletRooted='BU.Main.OS.IsAndroidDeviceTabletRooted';
 
+alias BU.IsAndroidTabManufAlcatel='function BU.Main.OS.IsAndroidTabletManufacturerAlcatel';
 alias BU.IsAndroidTabManufASUS='function BU.Main.OS.IsAndroidTabletManufacturerASUS';
 alias BU.IsAndroidTabManufBlackBerry='function BU.Main.OS.IsAndroidTabletManufacturerBlackBerry';
 alias BU.IsAndroidTabManufFujitsu='function BU.Main.OS.IsAndroidTabletManufacturerFujitsu';
+alias BU.IsAndroidTabManufGoogle='function BU.Main.OS.IsAndroidTabletManufacturerGoogle';
 alias BU.IsAndroidTabManufHuawei='function BU.Main.OS.IsAndroidTabletManufacturerHuawei';
 alias BU.IsAndroidTabManufPanasonic='function BU.Main.OS.IsAndroidTabletManufacturerPanasonic';
 alias BU.IsAndroidTabManufSamsung='function BU.Main.OS.IsAndroidTabletManufacturerSamsung';
