--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -2338,6 +2338,7 @@ alias BU.IsAndroidTabManufGoogle='function BU.Main.OS.IsAndroidTabletManufacture
 alias BU.IsAndroidTabManufHuawei='function BU.Main.OS.IsAndroidTabletManufacturerHuawei';
 alias BU.IsAndroidTabManufPanasonic='function BU.Main.OS.IsAndroidTabletManufacturerPanasonic';
 alias BU.IsAndroidTabManufSamsung='function BU.Main.OS.IsAndroidTabletManufacturerSamsung';
+alias BU.IsAndroidTabManufXiaomi='function BU.Main.OS.IsAndroidTabletManufacturerXiaomi';
 
 ## ----------------------------------------------
 
