--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -2336,8 +2336,10 @@ alias BU.IsAndroidTabManufBlackBerry='function BU.Main.OS.IsAndroidTabletManufac
 alias BU.IsAndroidTabManufFujitsu='function BU.Main.OS.IsAndroidTabletManufacturerFujitsu';
 alias BU.IsAndroidTabManufGoogle='function BU.Main.OS.IsAndroidTabletManufacturerGoogle';
 alias BU.IsAndroidTabManufHuawei='function BU.Main.OS.IsAndroidTabletManufacturerHuawei';
+alias BU.IsAndroidTabManufOppo='function BU.Main.OS.IsAndroidTabletManufacturerOppo';
 alias BU.IsAndroidTabManufPanasonic='function BU.Main.OS.IsAndroidTabletManufacturerPanasonic';
 alias BU.IsAndroidTabManufSamsung='function BU.Main.OS.IsAndroidTabletManufacturerSamsung';
+alias BU.IsAndroidTabManufSony='function BU.Main.OS.IsAndroidTabletManufacturerSony';
 alias BU.IsAndroidTabManufVivo='function BU.Main.OS.IsAndroidTabletManufacturerVivo';
 alias BU.IsAndroidTabManufXiaomi='function BU.Main.OS.IsAndroidTabletManufacturerXiaomi';
 
