--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -2300,8 +2300,10 @@ alias BU.IsAndroidManufFujitsu='function BU.Main.OS.IsAndroidManufacturerFujitsu
 alias BU.IsAndroidManufGoogle='function BU.Main.OS.IsAndroidManufacturerGoogle';
 alias BU.IsAndroidManufHTC='function BU.Main.OS.IsAndroidManufacturerHTC';
 alias BU.IsAndroidManufHuawei='function BU.Main.OS.IsAndroidManufacturerHuawei';
+alias BU.IsAndroidManufLenovo='function BU.Main.OS.IsAndroidManufacturerLenovo';
 alias BU.IsAndroidManufLG='function BU.Main.OS.IsAndroidManufacturerLG';
 alias BU.IsAndroidManufMotorola='function BU.Main.OS.IsAndroidManufacturerMotorola';
+alias BU.IsAndroidManufNokia='function BU.Main.OS.IsAndroidManufacturerNokia';
 alias BU.IsAndroidManufOppo='function BU.Main.OS.IsAndroidManufacturerOppo';
 alias BU.IsAndroidManufPanasonic='function BU.Main.OS.IsAndroidManufacturerPanasonic';
 alias BU.IsAndroidManufSamsung='function BU.Main.OS.IsAndroidManufacturerSamsung';
@@ -2318,8 +2320,10 @@ alias BU.IsAndroidPhoneManufBlackBerry='function BU.Main.OS.IsAndroidSmartphoneM
 alias BU.IsAndroidPhoneManufGoogle='function BU.Main.OS.IsAndroidSmartphoneManufacturerGoogle';
 alias BU.IsAndroidPhoneManufHTC='function BU.Main.OS.IsAndroidSmartphoneManufacturerHTC';
 alias BU.IsAndroidPhoneManufHuawei='function BU.Main.OS.IsAndroidSmartphoneManufacturerHuawei';
+alias BU.IsAndroidPhoneManufLenovo='function BU.Main.OS.IsAndroidSmartphoneManufacturerLenovo';
 alias BU.IsAndroidPhoneManufLG='function BU.Main.OS.IsAndroidSmartphoneManufacturerLG';
 alias BU.IsAndroidPhoneManufMotorola='function BU.Main.OS.IsAndroidSmartphoneManufacturerMotorola';
+alias BU.IsAndroidPhoneManufNokia='function BU.Main.OS.IsAndroidSmartphoneManufacturerNokia';
 alias BU.IsAndroidPhoneManufOppo='function BU.Main.OS.IsAndroidSmartphoneManufacturerOppo';
 alias BU.IsAndroidPhoneManufPanasonic='function BU.Main.OS.IsAndroidSmartphoneManufacturerPanasonic';
 alias BU.IsAndroidPhoneManufSamsung='function BU.Main.OS.IsAndroidSmartphoneManufacturerSamsung';
@@ -2335,7 +2339,12 @@ alias BU.IsAndroidTabManufASUS='function BU.Main.OS.IsAndroidTabletManufacturerA
 alias BU.IsAndroidTabManufBlackBerry='function BU.Main.OS.IsAndroidTabletManufacturerBlackBerry';
 alias BU.IsAndroidTabManufFujitsu='function BU.Main.OS.IsAndroidTabletManufacturerFujitsu';
 alias BU.IsAndroidTabManufGoogle='function BU.Main.OS.IsAndroidTabletManufacturerGoogle';
+alias BU.IsAndroidTabManufHTC='function BU.Main.OS.IsAndroidTabletManufacturerHTC';
 alias BU.IsAndroidTabManufHuawei='function BU.Main.OS.IsAndroidTabletManufacturerHuawei';
+alias BU.IsAndroidPhoneManufLenovo='function BU.Main.OS.IsAndroidSmartphoneManufacturerLenovo';
+alias BU.IsAndroidTabManufLG='function BU.Main.OS.IsAndroidTabletManufacturerLG';
+alias BU.IsAndroidTabManufMotorola='function BU.Main.OS.IsAndroidTabletManufacturerMotorola';
+alias BU.IsAndroidTabManufNokia='function BU.Main.OS.IsAndroidTabletManufacturerNokia';
 alias BU.IsAndroidTabManufOppo='function BU.Main.OS.IsAndroidTabletManufacturerOppo';
 alias BU.IsAndroidTabManufPanasonic='function BU.Main.OS.IsAndroidTabletManufacturerPanasonic';
 alias BU.IsAndroidTabManufSamsung='function BU.Main.OS.IsAndroidTabletManufacturerSamsung';
