--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -2309,6 +2309,7 @@ alias BU.IsAndroidManufPanasonic='function BU.Main.OS.IsAndroidManufacturerPanas
 alias BU.IsAndroidManufSamsung='function BU.Main.OS.IsAndroidManufacturerSamsung';
 alias BU.IsAndroidManufSony='function BU.Main.OS.IsAndroidManufacturerSony';
 alias BU.IsAndroidManufVivo='function BU.Main.OS.IsAndroidManufacturerVivo';
+alias BU.IsAndroidManufWiko='function BU.Main.OS.IsAndroidManufacturerWiko';
 alias BU.IsAndroidManufXiaomi='function BU.Main.OS.IsAndroidManufacturerXiaomi';
 
 alias BU.IsAndroidDeviceSmartphone='function BU.Main.OS.IsAndroidDeviceSmartphone';
@@ -2329,6 +2330,7 @@ alias BU.IsAndroidPhoneManufPanasonic='function BU.Main.OS.IsAndroidSmartphoneMa
 alias BU.IsAndroidPhoneManufSamsung='function BU.Main.OS.IsAndroidSmartphoneManufacturerSamsung';
 alias BU.IsAndroidPhoneManufSony='function BU.Main.OS.IsAndroidSmartphoneManufacturerSony';
 alias BU.IsAndroidPhoneManufVivo='function BU.Main.OS.IsAndroidSmartphoneManufacturerVivo';
+alias BU.IsAndroidPhoneManufWiko='function BU.Main.OS.IsAndroidSmartphoneManufacturerWiko';
 alias BU.IsAndroidPhoneManufXiaomi='function BU.Main.OS.IsAndroidSmartphoneManufacturerXiaomi';
 
 alias BU.IsAndroidDeviceTablet='BU.Main.OS.IsAndroidDeviceTablet';
@@ -2350,6 +2352,7 @@ alias BU.IsAndroidTabManufPanasonic='function BU.Main.OS.IsAndroidTabletManufact
 alias BU.IsAndroidTabManufSamsung='function BU.Main.OS.IsAndroidTabletManufacturerSamsung';
 alias BU.IsAndroidTabManufSony='function BU.Main.OS.IsAndroidTabletManufacturerSony';
 alias BU.IsAndroidTabManufVivo='function BU.Main.OS.IsAndroidTabletManufacturerVivo';
+alias BU.IsAndroidTabManufWiko='function BU.Main.OS.IsAndroidTabletManufacturerWiko';
 alias BU.IsAndroidTabManufXiaomi='function BU.Main.OS.IsAndroidTabletManufacturerXiaomi';
 
 ## ----------------------------------------------
