Big save : partial redesign of several parts of the project's architecture

--- a/install/.Bash-utils/config/modules/Software/OSMgr.conf
+++ b/install/.Bash-utils/config/modules/Software/OSMgr.conf
@@ -34,8 +34,9 @@ function BU.Software.ModConfig.OSMgr.GetCurrentOS()
     #**** Code ****
     # TODO : Checking if the user wants to use Linux functions for Android or Chrome OS, since both operating systems are based on Linux.
 
-    ## ---------------------------------------------------------------------------------------------------------------------------------------------------
-    # CASE MATTERS, DO NOT MODIFY ANY VALUES, AS THE THE FUNCTIONS NAMES ARE CASE SENSITIVE (OPERATING SYSTEMS NAMES WRITTEN IN THE FUNCTIONS NAMES) !!!!!
+    #~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    #~ CASE MATTERS, DO NOT MODIFY ANY VALUES, AS THE THE FUNCTIONS NAMES ARE CASE SENSITIVE (OPERATING SYSTEMS NAMES WRITTEN IN THE FUNCTIONS NAMES) !!!!!
+    #~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
     # The "${__BU_SOFTWARE_CURRENT_OS}" variable is declared as constants, as its value must not be changed during the script's execution.
     BU.Main.OS.IsBSD        && { declare -r __BU_SOFTWARE_CURRENT_OS='BSD';     };
