--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -28,6 +28,11 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent.Optimize() { pri
 
 ## BASH UTIILS SUB-FOLDERS PATHS
 
+#
+#
+
+#
+
 # shellcheck disable=SC2016,SC2059
 function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 {
@@ -53,7 +58,7 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 
         BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_BIN_DIR_PATH' \
@@ -80,7 +85,7 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 
         BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_DOCS_DIR_PATH' \
@@ -107,7 +112,7 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 
         BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_DIR_PATH' \
@@ -134,7 +139,7 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 
         BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_RES_DIR_PATH' \
@@ -147,6 +152,11 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 ## ==============================================
 
 ## BASH UTILS DEV-TOOLS PATHS
+
+#
+#
+
+#
 
 # shellcheck disable=SC2016,SC2059
 function BU.Main.ModConfig.Module.BUDevToolsPaths()
@@ -173,7 +183,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
         BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH' \
@@ -198,7 +208,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
         BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
 
     };
 
@@ -225,7 +235,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
         BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_DEVTOOLS_DSK' \
@@ -252,7 +262,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
         BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_DEVTOOLS_IMG' \
@@ -279,7 +289,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
         BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_DEVTOOLS_SRC' \
         "${__BU_MAIN_MODULE_DEVTOOLS_SRC}" 'Dirpath' \
@@ -305,7 +315,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
         BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_DEVTOOLS_TRANSL' \
@@ -318,6 +328,11 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 ## ==============================================
 
 ## "lib" FOLDER'S CONTENT.
+
+#
+#
+
+#
 
 # shellcheck disable=SC2016,SC2059
 function BU.Main.ModConfig.Module.BULibFolderContent()
@@ -344,7 +359,7 @@ function BU.Main.ModConfig.Module.BULibFolderContent()
 
         BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH' \
@@ -370,7 +385,7 @@ function BU.Main.ModConfig.Module.BULibFolderContent()
 
         BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_MOD_DIR_PATH' \
@@ -396,7 +411,7 @@ function BU.Main.ModConfig.Module.BULibFolderContent()
 
         BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_LANG_DIR_PATH' \
@@ -415,6 +430,11 @@ function BU.Main.ModConfig.Module.BULibFolderContent()
 #### BASH UTILS LIBRARY FILES PATHS
 
 ## MAIN MODULE'S "config" FOLDER'S CONTENT
+
+#
+#
+
+#
 
 # shellcheck disable=SC2016,SC2059
 function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
@@ -439,7 +459,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_COLORS_PATH' \
@@ -466,7 +486,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_COLORS_PATH' \
@@ -493,7 +513,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_COLORS_PATH' \
@@ -520,7 +540,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_EXIT_PATH' \
@@ -546,7 +566,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_FILESYSTEM_PATH' \
@@ -573,7 +593,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_OS_PATH' \
@@ -600,7 +620,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_INIT_PATH' \
@@ -627,7 +647,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_STATUS_PATH' \
@@ -654,7 +674,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_TEXT_PATH' \
@@ -681,7 +701,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_TIME_PATH' \
@@ -696,6 +716,11 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 ## MAIN MODULE'S INITIALIZER PATH
 
 # Declaring the variables inside a function to prevent the displaying of the Shellcheck info messages when Shellchecking the compiled file.
+
+#
+#
+
+#
 
 # shellcheck disable=SC2016,SC2059
 function BU.Main.ModConfig.Module.MainModuleInitializerPath() {
@@ -721,7 +746,7 @@ function BU.Main.ModConfig.Module.MainModuleInitializerPath() {
 
         BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_FILE_INITIALIZER_FILE_PATH' "${__BU_MAIN_MODULE_LIB_FILE_INITIALIZER_FILE_PATH}" \
@@ -821,7 +846,7 @@ else
 
             BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-            BU.ModuleInit.IsInScript && exit 1;
+            BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
 
 			return 1;
         fi
@@ -844,7 +869,7 @@ else
 
         BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
 
 		return 1;
 
@@ -870,7 +895,7 @@ else
 
         BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
 
 		return 1;
 
@@ -891,7 +916,7 @@ else
 
         BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
 
 		return 1;
     fi
