--- a/install/.Bash-utils/config/modules/Software/Software.module.conf
+++ b/install/.Bash-utils/config/modules/Software/Software.module.conf
@@ -41,7 +41,7 @@ function BU.Software.ModConfig.Module.SoftwareModuleConfigFolderContent()
 
         BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-        BU.ModuleInit.IsInScript && exit 1; return 1;
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
     };
 
 
@@ -79,7 +79,7 @@ __BU_SOFTWARE_MODULE_LIB_MOD_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_SOFTWARE
 
     BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
-    BU.ModuleInit.IsInScript && exit 1; return 1;
+    BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
 };
 
 DisplayInitGlobalVarsInfos '' "" '' "";
