--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -79,7 +79,12 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_TMP_DIR_PARENT_NAME'
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH' "${__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH}" 'Dirpath'   "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH}"  "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 3 ))";
 
 if [ ! -d "${__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH}" ]; then
-    mkdir -p "${__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH}" || { echo >&2; echo "UNABLE TO CREATE THE PROJECT'S TEMPORARY FOLDER'S PARENT DIRECTORY « ${__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH} » !" >&2; echo >&2; exit 1; };
+    mkdir -p "${__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH}" || {
+        echo >&2; echo "UNABLE TO CREATE THE PROJECT'S TEMPORARY FOLDER'S PARENT DIRECTORY « ${__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH} » !" >&2;
+        echo >&2;
+
+        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+    };
 fi
 
 # Checking first if the effective user identifiant (EUID) is equal to super-user's EUID or not.
